--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
 @charset "utf-8";
+/* 웹폰트 선언 */
+@font-face {
+    font-family: 'Noto Sans Regular';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Noto Sans Regular'), local('NotoSans-Regular'),
+    url('font/eot/NotoSansKR-Regular-Hestia.eot'),
+    url('font/eot/NotoSansKR-Regular-Hestia.eot?#iefix') format('embedded-opentype'),
+    url('font/woff/NotoSansKR-Regular-Hestia.woff') format('woff'),
+    url('font/otf/NotoSansKR-Regular-Hestia.otf') format('opentype');
+}
 /* 요소의 여백 초기화 */
 html, body, h1, h2, h3, h4, h5, h6, p{
   margin: 0;
@@ -9,11 +20,16 @@ h1, h2, h3, h4, h5, h6, p{
   font-size: 1em;
   font-weight: normal;
 }
+/* 기본 스타일 */
+body{
+  font-family: 'Noto Sans Regular', sans-serif;
+  
+}
 /* 레이아웃 */
 .wrapper{
   background: url(images/bg_flower.png) no-repeat 50% 0,
   linear-gradient(to bottom, rgba(0,0,0, 0.5) 0%, rgba(255,255,255, 1) 100%) repeat 0 0;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   height: 100vh;
 }
 .header, .visual, .main-content, .slogan, .footer{
