--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,23 @@ body {
     box-sizing: border-box;
 }
 
+
+/* 헤더 */
+
 .header {
-    height: 115px;
+    min-height: 115px;
     background-color: #fff;
     border-radius: 0 0 15px 15px;
+    position: relative;
+}
+
+
+/* 로고 */
+
+.logo {
+    position: fixed;
+    bottom: 45px;
+    right: 60px;
 }
 
 .visual {
