--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,9 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+ul,
+li {
     margin: 0;
     padding: 0;
 }
@@ -56,8 +58,13 @@ p {
 
 /* 기본 스타일 */
 
+html {
+    font-size: 10px;
+}
+
 body {
     font-family: 'Noto Sans Regular', sans-serif;
+    font-size: 1.4rem;
 }
 
 
@@ -80,6 +87,14 @@ body {
 }
 
 
+/* 링크 스타일 */
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+
 /* 헤더 */
 
 .header {
@@ -87,15 +102,49 @@ body {
     background-color: #fff;
     border-radius: 0 0 15px 15px;
     position: relative;
+    padding: 0 30px;
 }
 
 
 /* 로고 */
 
 .logo {
-    position: fixed;
-    bottom: 45px;
-    right: 60px;
+    position: absolute;
+    top: 45px;
+    left: 60px;
+}
+
+
+/* 텍스트링크 - 안내링크 */
+
+.info-menu {
+    list-style-type: none;
+    font-size: 0;
+    text-align: right;
+    position: relative;
+    right: -10px;
+}
+
+.info-menu li,
+.info-menu a {
+    display: inline-block;
+}
+
+.info-menu li {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+}
+
+.info-menu a {
+    padding: 10px;
+}
+
+.info-menu li::after {
+    content: ":";
+}
+
+.info-menu li:last-child::after {
+    content: "";
 }
 
 .visual {
