--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ a {
 
 .main-menu>li {
     float: left;
+    position: relative;
 }
 
 .main-menu>li>a {
@@ -188,10 +189,18 @@ a {
     list-style-type: none;
     background: lime;
     position: absolute;
+    white-space: nowrap;
+    top: 47px;
+}
+
+.main-menu ul li {
+    display: inline-block;
 }
 
 .about-html {
     display: block;
+    top: 0;
+    left: 0;
 }
 
 .about-css {
