--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,32 @@ a {
     right: -25px;
 }
 
+
+/* 비주얼 */
+
+@keyframes text-ani {
+    0% {
+        font-size: 12px;
+        color: rgba(0, 0, 0, 0);
+        transform: translate(0, 0);
+    }
+    100% {
+        font-size: 24px;
+        color: rgba(0, 0, 0, 1);
+        transform: translate(400px, 60px);
+    }
+}
+
 .visual {
     height: 120px;
+    position: relative;
+}
+
+.visual-text {
+    display: inline-block;
+    background: yellow;
+    color: rgba(0, 0, 0, 0);
+    animation: text-ani 0.5s forwards ease-in-out;
 }
 
 .main-content {
