--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,15 @@ a {
     }
 }
 
+@keyframes flower-ani {
+    0% {
+        opacity: 1
+    }
+    100% {
+        opacity: 0
+    }
+}
+
 .visual {
     height: 120px;
     position: relative;
@@ -275,6 +284,7 @@ a {
     left: 0;
     width: 100%;
     height: 120px;
+    animation: flower-ani 2s infinite alternate;
 }
 
 .visual::before {
@@ -283,11 +293,12 @@ a {
 
 .visual::after {
     background: url(images/ani_flower_03.png) no-repeat 300px 0, url(images/ani_flower_04.png) no-repeat 800px 0;
+    animation-delay: 2s;
 }
 
 .visual-text {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    display: inline-block;
+    position: absolute;
     color: rgba(0, 0, 0, 0);
     animation: text-ani 0.5s forwards ease-in-out;
 }
