--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@
 
 /* 숨김 콘텐츠 */
 
-legend {
+legend,
+.hidden {
     position: absolute;
     left: -9999em;
 }
@@ -444,6 +445,44 @@ a {
 .find {
     float: right;
 }
+
+
+/*유효성 검사 배너 링크*/
+
+.validation {
+    margin-top: 20px;
+}
+
+.validation-list {
+    list-style-type: none;
+}
+
+.validation-list a {
+    display: block;
+    border: 1px solid #aaa;
+    border-radius: 15px;
+    height: 30px;
+    line-height: 30px;
+    margin: 10px 0;
+    padding-left: 45px;
+    background: url("images/validation_icon.png") no-repeat 20px 50%, linear-gradient(to bottom, #eee 0%, #ccc 100%);
+}
+
+
+/*.validation-list li {
+    background: url("images/validation_icon.png") no-repeat 20px 50%, linear-gradient(to bottom, #eee, #ccc);
+    list-style-type: none;
+    border: 1px solid #aaa;
+    height: 30px;
+    margin-bottom: 10px;
+    line-height: 30px;
+    text-indent: 45px;
+    border-radius: 15px;
+}
+
+.validation-list a {
+    display: block;
+}*/
 
 .slogan {
     height: 10vh;
