--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-{
+h6 {
     font-size: 1em;
     font-weight: normal;
 }
@@ -586,6 +585,143 @@ a {
     color: #fff;
     background: linear-gradient(to bottom, #666, #ccc);
 }
+
+
+/* 공지사항 및 자료실*/
+
+.board {
+    background: yellow;
+    margin-top: 20px;
+    position: relative;
+    height: 180px;
+}
+
+.notice-heading,
+.pds-heading {
+    font-size: 15px;
+    float: left;
+    border: 1px solid #aaa;
+    border-radius: 5px 5px 0 0;
+    color: #999;
+    background: linear-gradient(to bottom, #eee, #ccc);
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.act .notice-heading,
+.act .pds-heading {
+    border-color: #e0652c;
+    border-bottom-color: #fff;
+    background: #fff;
+    color: #e0652c;
+    outline: 0;
+}
+
+.notice-list,
+.pds-list {
+    box-sizing: border-box;
+    width: 100%;
+    list-style-type: square;
+    position: absolute;
+    top: 45px;
+    left: 0;
+    padding-left: 20px;
+}
+
+.notice-list a,
+.pds-list a {
+    width: 285px;
+    float: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.notice-list li,
+.pds-list li {
+    margin: 5px 0;
+}
+
+.notice-list time,
+.pds-list time {
+    float: right;
+}
+
+.notice-more,
+.pds-more {
+    position: absolute;
+    top: 0;
+    right: -8px;
+    padding: 8px;
+}
+
+.notice-more::before,
+.pds-more::before {
+    content: "p";
+    font-family: "webcafeIcon";
+    color: hsla(120, 100%, 30%, 1);
+    position: relative;
+    top: 2px;
+}
+
+.notice-list,
+.pds-list,
+.notice-more,
+.pds-more {
+    display: none;
+}
+
+.act .notice-list,
+.act .pds-list,
+.act .notice-more,
+.act .pds-more {
+    display: block;
+}
+
+
+/*.board {
+    background: pink;
+    margin-top: 20px;
+    position: relative;
+}
+.notice-more,
+.pds-more {
+    top: 0;
+    right: 0;
+    position: absolute;
+}
+
+.notice-list,
+.pds-list {
+    list-style-type: square;
+    padding: 10px 15px 0 0;
+}
+
+.notice-list {
+    background: yellow;
+}
+
+.pds-list {
+    background: green;
+}
+
+.notice-heading,
+.pds-heading {
+    background: linear-gradient(to bottom, white, #aaa);
+    display: inline-block;
+    border: 1px solid #aaa;
+    color: gray;
+    border-radius: 5px 5px 0 0;
+    font: 18px bold;
+    float: left;
+}
+
+.act .notice-heading,
+.act .pds-heading {
+    border: 1px solid orange;
+    background: white;
+    color: orange;
+}*/
 
 .slogan {
     height: 10vh;
